# Legal-Agentic-Knowledge-Platform

./: .dockerignore  .env.cloudbase.example  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: CLOUDBASE_DEPLOYMENT.md  CODE_READING_SESSION_1_ZH.md  DEPLOYMENT.md  GITHUB_PUBLISHING.md  INTERVIEW_GUIDE.md  INTERVIEW_SCRIPT_ZH.md  LEGAL_CASE_STUDY.md  PROJECT_FINALIZATION.md  PROJECT_WALKTHROUGH_ZH.md  RELEASES.md  RESUME_BULLETS.md  RESUME_REWRITE_ZH.md  WEI_XIANG_RESUME_FINAL_ZH.md
examples/: employee_handbook.md  eval_dataset.json
examples/legal/: answer_eval_dataset.json  answer_eval_reference_metrics.json  legal_assistant_handbook.md  retrieval_eval_dataset.json  retrieval_eval_reference_metrics.json
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: LegalAssistant.jsx  index.css  main.jsx
scripts/: build_bootstrap_snapshot.py  demo_cli.py  demo_showcase.py  ingest_local_file.py  run_eval.py
tests/: test_agent_workflow.py  test_answer_sections.py  test_bootstrap_snapshot.py  test_demo_ui.py  test_evaluation.py  test_execution_router.py  test_frontend_static.py  test_legacy_legal_eval_loader.py  test_local_corpus.py  test_model_router.py  test_observability.py  test_parser.py  test_query_policy.py  test_rag.py  test_refusal_policy.py  test_remote_adapters.py  test_run_store.py  test_sqlite_run_store.py  test_stream_api.py  test_team_agent.py  test_tenant_isolation.py
(+37 files in other folders)
